# travis-ci-test

./: .appveyor.yml  .azure-pipelines.yml  .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  appveyor.yml  build.bat  build.sh  filesystem.cpp  install.sh  script.sh  test.cpp  test.sh  test1.cpp
.ci/: build.bat  install-cmake.ps1  install-cmake.sh
.ci/azure-pipelines/: steps-check-cmake.yml  steps-cmake.yml  steps-install-cmake.yml
.circleci/: config.yml
.github/workflows/: greet.yml
src/: CMakeLists.txt  test2.cpp
